--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prisma-dbml-generator",
+  "name": "@pablosz/prisma-dbml-generator",
   "version": "0.10.0",
   "description": "Prisma DBML Generator",
   "bin": "./dist/generator.js",
